--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "backend-template",
   "version": "1.0.0",
   "main": "server.js",
-
+  "type": "module",
   "scripts": {
+    "start": "node server.js",       
+    "dev": "nodemon server.js",     
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
